Add root index.html

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
   
 
-  <div id="view-list" class="ui-top ui-right" style="display: none">
+  <div id="view-list">
     <a href="classicalbedroom/index.html">Classical Bedroom</a>
   </div>
 
