Add scene `home`

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
   <div id="view-list">
     <a href="classicalbedroom/index.html">Classical Bedroom</a>
+    <a href="home/index.html">H3D Apartment</a>
   </div>
 
 </body>
